--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,6 @@ Home Page
 {% endblock %}
 
 {% block content %}
-<h1>First project Home Page</h1>
+<h1 class = "bg-blue-500 text-3xl">First project Home Page</h1>
+<p class = "text-center w-20 bg-orange-400">Welcome to the home page of our first Django project using Tailwind CSS!</p> 
 {% endblock %}
