--- a/app/templates/app/all_app.html
+++ b/app/templates/app/all_app.html
@@ -7,4 +7,22 @@ All App Page
 
 {% block content %}
 <h1>All App Page</h1>
+<div class = "grid grid-cols-4 gap-4 m-4">
+
+{% for app in apps %}
+  <div class = "bg-blue-800 p-5">
+    <img class = "rounded" src = "{{app.image.url}}" alt = "">
+    <h3 class= "text-3xl font-bold">{{chai.name}}</h3>
+
+    <a href = "{% url 'app_detail' app.id %}">
+      <button type="button"
+      class = "inline-block px-6 py-2.5 bg-green-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-green-700 hover:shadow-lg focus:bg-green-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-green-800 active:shadow-lg transition duration-150 ease-in-out">
+
+      {{app.type}} - {{app.id}}
+    </button>
+  </a>
+  
+{% endfor  %}
+
 {% endblock %}
+
